--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <title>Test</title>
     </head>
     <body>
+        <h1>Testing</h1><br><br>
         <div id="login"></div>
         <div id="signUp"></div>
         <div id="postWorkspaces"></div>
