--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div id="login"></div>
         <div id="signUp"></div>
         <div id="postWorkspaces"></div>
-        <div id="workspace"></div>
+        <div id="wspace"></div>
 
         <script src="js/vue.min.js"></script>
         <script src="js/test.js"></script>
