--- a/index.html
+++ b/index.html
@@ -10,11 +10,23 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
         <title>Test</title>
     </head>
-    <body>
-        <div id="login"></div>
-        <div id="signUp"></div>
-        <div id="postWorkspaces"></div>
-        <div id="workspace"></div>
+    <body class="bg-secondary">
+        <div class="container p-3 my-3 text-white">
+            <div id="login"></div>
+            <div id="signUp"></div>
+            <div class="row">
+                <div class="col-sm">
+                    <div id="workspace"></div>  
+                </div>
+                <div class="col-sm">
+                    <div id="thread"></div>
+                </div>               
+            </div>
+            
+            <br><br>
+            <div id="users"></div>
+        </div>
+        
 
         <script src="js/vue.min.js"></script>
         <script src="js/test.js"></script>
