--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <link rel="stylesheet" href="css/mains.css">
+        <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
@@ -22,22 +22,6 @@
         <div class="container-fluid p-3 my-3 text-white">
             <div id="login"></div>
             <div id="signUp"></div>
-            <div class="row">
-                <div class="col-sm-2">
-                    <div id="workspace"></div>  
-                </div>
-                <div class="col-sm-2">
-                    <div id="thread"></div>
-                </div>
-                <div class="col-sm-8">
-                    <div id="message"></div>
-                </div>               
-            </div>
-            
-            <br><br>
-            <div class="row">
-                <div id="users" class="col-sm"></div>
-            </div>
             
         </div>
 
