--- a/index.html
+++ b/index.html
@@ -11,15 +11,19 @@
         <title>Chat App</title>
     </head>
 
-    <div class="sidebar">
-        <a class="active" href="index.html">Home</a>
-        <a href="channels.html">Channel</a>
-        <a href="users.html">Users</a>
-        <a href="dms.html">Direct Messages</a>
-      </div>
 
-    <body class="bg-secondary">
-        <div class="container-fluid p-3 my-3 text-white">
+    <body>
+    <div id="chatApp">
+
+        <div class="sidebar">
+            <a class="active" href="index.html">Home</a>
+            <a href="channels.html">Channel</a>
+            <a href="users.html">Users</a>
+            <a href="dms.html">Direct Messages</a>
+          </div>
+
+
+        <div id="id01" class="container">
             <div id="login"></div>
             <div id="signUp"></div>
             
