--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
             <div id="login"></div>
             <div id="signUp"></div>
             <div class="row">
-                <div class="col-sm-2">
+                <div class="col-lg-2">
                     <div id="workspace"></div>  
                 </div>
-                <div class="col-sm-2">
+                <div class="col-lg-2">
                     <div id="thread"></div>
                 </div>
-                <div class="col-sm-8">
+                <div class="col-lg-8">
                     <div id="message"></div>
                 </div>               
             </div>
