--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                 </div>
                 <div class="col-lg-8">
                     <div id="message"></div>
+                    <div id="chats"></div>
                 </div>               
             </div>
             
