--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
         <div class="container-fluid p-3 my-3 text-white">
             <div id="login"></div>
             <div id="signUp"></div>
+            <div>
+                <button type="button" onclick="logout()">Logout</button>
+            </div>
             <div class="row">
                 <div class="col-lg-2">
                     <div id="workspace"></div>  
