Added logout to Steven's update

--- a/signup.html
+++ b/signup.html
@@ -15,7 +15,7 @@
 
         <div class="sidebar">
             <a> ChatApp</a>
-            <a href="index.html">Login</a>
+            <a href="index.html">Login/Logout</a>
             <a class="active" href="signup.html">Signup</a>
             <a href="channels.html">Channel</a>
             <a href="users.html">Users</a>
