--- a/channels.html
+++ b/channels.html
@@ -13,7 +13,7 @@
 
     <div class="sidebar">
         <a> ChatApp</a>
-        <a href="index.html">Login</a>
+        <a href="index.html">Login/Logout</a>
         <a href="signup.html">Signup</a>
         <a class="active" href="channels.html">Channel</a>
         <a href="users.html">Users</a>
