--- a/dms.html
+++ b/dms.html
@@ -11,13 +11,14 @@
         <title>Chat App</title>
     </head>
 
-    <div class="sidebar">
+    <div class="topnav">
         <a> ChatApp</a>
         <a href="index.html">Login</a>
         <a href="signup.html">Signup</a>
         <a href="channels.html">Channel</a>
         <a href="users.html">Users</a>
         <a class="active" href="dms.html">Direct Messages</a>
+        <a onclick="logout()">Logout</a>
       </div>
 
      
