--- a/index.html
+++ b/index.html
@@ -11,17 +11,14 @@
         <title>Chat App</title>
     </head>
 
-
-    
-    <div id="chatApp">
-
-        <div class="sidebar">
+        <div class="topnav">
             <a> ChatApp</a>
             <a class="active" href="index.html">Login</a>
             <a href="signup.html">Signup</a>
             <a href="channels.html">Channel</a>
             <a href="users.html">Users</a>
             <a href="dms.html">Direct Messages</a>
+            <a onclick="logout()">Logout</a>
           </div>
 
           <body class="bg-secondary">
