--- a/signup.html
+++ b/signup.html
@@ -11,15 +11,16 @@
         <title>Chat App</title>
     </head>
 
-    <div id="chatApp">
 
-        <div class="sidebar">
+
+        <div class="topnav">
             <a> ChatApp</a>
             <a href="index.html">Login</a>
             <a class="active" href="signup.html">Signup</a>
             <a href="channels.html">Channel</a>
             <a href="users.html">Users</a>
             <a href="dms.html">Direct Messages</a>
+            <a onclick="logout()">Logout</a>
           </div>
           <body class="bg-secondary">
             <div class="container-fluid p-3 my-3 text-white">
