added bootstrap styling

--- a/channels.html
+++ b/channels.html
@@ -24,7 +24,7 @@
       <div class="sidebar">
             <div id="workspace"></div>  
       </div>
-      <body class="bg-secondary">
+      <body class="bg-dark">
         <div class="container-fluid p-3 my-3 text-white">
             <div id="id01" class="container">
                 <h1 class="center" >ChatApp</h1>
@@ -35,7 +35,6 @@
                     </div>
                     <div class="col-lg-6">
                         <div id="message"></div>
-                        <div id="chats"></div>
                     </div>  
                 </div>
             
