--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <a onclick="logout()">Logout</a>
           </div>
 
-          <body class="bg-secondary">
+          <body class="bg-dark">
             <div class="container-fluid p-3 my-3 text-white">
                 <div id="id01" class="container">
                     <h1 class="center" >ChatApp</h1>
