--- a/signup.html
+++ b/signup.html
@@ -14,7 +14,7 @@
 
 
         <div class="topnav">
-            <a> ChatApp</a>
+            <a> <h6>ChatApp</h6></a>
             <a href="index.html">Login</a>
             <a class="active" href="signup.html">Signup</a>
             <a href="channels.html">Channel</a>
