--- a/users.html
+++ b/users.html
@@ -12,7 +12,7 @@
     </head>
 
     <div class="topnav">
-        <a> ChatApp</a>
+        <a> <h6>ChatApp</h6></a>
         <a href="index.html">Login</a>
         <a href="signup.html">Signup</a>
         <a href="channels.html">Channel</a>
