Nav Bar and CSS
Login and signup page have been redone with Css and lookes better

NavBar function finally working and detecs if somone is logged in or not and changed depending on that.

--- a/users.html
+++ b/users.html
@@ -12,16 +12,11 @@
     </head>
 
     <div class="topnav">
-        <a> ChatApp</a>
-        <a href="index.html">Login</a>
-        <a href="signup.html">Signup</a>
-        <a href="channels.html">Channel</a>
-        <a class="active" href="users.html">Users</a>
-        <a href="dms.html">Direct Messages</a>
-        <a onclick="logout()">Logout</a>
+        <div id="topnav">
+        </div>
       </div>
 
-      <body class="bg-secondary">
+      <body class="secondary">
         <div class="container-fluid p-3 my-3 text-white">
             <div id="id01" class="container">
                 <h1 class="center" >ChatApp</h1>
