--- a/channels.html
+++ b/channels.html
@@ -12,19 +12,14 @@
     </head>
 
     <div class="topnav">
-        <a> <h5>ChatApp</h5></a>
-        <a href="index.html">Login</a>
-        <a href="signup.html">Signup</a>
-        <a class="active" href="channels.html">Channel</a>
-        <a href="users.html">Users</a>
-        <a href="dms.html">Direct Messages</a>
-            <a onclick="logout()">Logout</a>
+        <div id="topnav">
+        </div>
       </div>
 
       <div class="sidebar">
             <div id="workspace"></div>  
       </div>
-      <body class="bg-dark">
+      <body class="secondary">
         <div class="container-fluid p-3 my-3 text-white">
             <div id="id01" class="container">
                 <h1 class="center" >ChatApp</h1>
@@ -35,6 +30,7 @@
                     </div>
                     <div class="col-lg-6">
                         <div id="message"></div>
+                    
                     </div>  
                 </div>
             
