--- a/channels.html
+++ b/channels.html
@@ -39,6 +39,8 @@
         </div>
 
         <script src="js/vue.min.js"></script>
+        <script src="js/nav.js"></script>
         <script src="js/main.js"></script>
+        
     </body>
 </html>
