--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
          
 
         <script src="js/vue.min.js"></script>
-        <script src="js/main.js"></script>
+        <script src="js/login.js"></script>
+        <script src="js/nav.js"></script>
+       
     </body>
 </html>
