--- a/signup.html
+++ b/signup.html
@@ -31,6 +31,8 @@
             </div>
        
         <script src="js/vue.min.js"></script>
-        <script src="js/main.js"></script>
+        <script src="js/signUp.js"></script>
+        <script src="js/nav.js"></script>
+        
     </body>
 </html>
