--- a/dms.html
+++ b/dms.html
@@ -43,5 +43,6 @@
 
         <script src="js/vue.min.js"></script>
         <script src="js/main.js"></script>
+        <script src="js/nav.js"></script>
     </body>
 </html>
