--- a/dms.html
+++ b/dms.html
@@ -44,5 +44,6 @@
         <script src="js/vue.min.js"></script>
         <script src="js/main.js"></script>
         <script src="js/nav.js"></script>
+        <script src="js/app.js"></script>
     </body>
 </html>
