--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
         <script src="js/vue.min.js"></script>
         <script src="js/login.js"></script>
         <script src="js/nav.js"></script>
+        <script src="js/app.js"></script>
+
        
     </body>
 </html>
