--- a/users.html
+++ b/users.html
@@ -37,6 +37,7 @@
 
         <script src="js/vue.min.js"></script>
         <script src="js/main.js"></script>
+        <script src="js/app.js"></script>
        
     </body>
 </html>
