Forgot and Reset Html and js
Added html and js for reset and forgot password

--- a/signup.html
+++ b/signup.html
@@ -31,7 +31,7 @@
             </div>
        
         <script src="js/vue.min.js"></script>
-        <script src="js/main.js"></script>
+        <script src="js/signUp.js"></script>
         <script src="js/nav.js"></script>
         <script src="js/app.js"></script>
 
